# Algorithms_DataStructures_Mandelbrot_Parallelization

./: CMakeLists.txt  Mandelbrot.cbp  Mandelbrot.cpp  Mandelbrot.h  README.md  WinAdapt.cpp  WinAdapt.h  Zeitmessung.c  Zeitmessung.h  main.cpp
